# Rover-Architecture-Ros2

./: README.md
src/src/urc_rover/data/images/: science_Site_Alpha_20251017_155136_metadata.json
src/src/urc_rover/launch/: autonomous_nav.launch.py
src/src/urc_rover/urc_rover/missions/: autonomous_nav.py  delivery_mission.py  science_mission.py
src/src/urc_rover/urc_rover/sensors/: camera_handler.py  gnss_simulator.py
src/src/urc_rover_interfaces/: package.xml
src/src/urc_rover_interfaces/action/: DeliveryTask.action
urc_rover_ws/src/urc_rover/: package.xml  setup.cfg  setup.py
urc_rover_ws/src/urc_rover/launch/: rover_system.launch.py  science_mission.launch.py
urc_rover_ws/src/urc_rover/urc_rover/: mission_manager.py
urc_rover_ws/src/urc_rover/urc_rover/missions/: servicing_mission.py
urc_rover_ws/src/urc_rover/urc_rover/navigation/: navigation_controller.py
urc_rover_ws/src/urc_rover/urc_rover/utils/: led_indicator.py
urc_rover_ws/src/urc_rover_interfaces/: CMakeLists.txt
urc_rover_ws/src/urc_rover_interfaces/action/: NavigateToGoal.action
